--- a/src/main/webapp/app/entities/candidature/candidature-dialog.component.html
+++ b/src/main/webapp/app/entities/candidature/candidature-dialog.component.html
@@ -27,7 +27,8 @@
             <label class="form-control-label" jhiTranslate="tastFondationApp.candidature.candidat" for="field_candidat">Candidat</label>
             <select class="form-control" id="field_candidat" name="candidat" [(ngModel)]="candidature.candidat" >
                 <option [ngValue]="null"></option>
-                <option [ngValue]="candidatOption.id === candidature.candidat?.id ? candidature.candidat : candidatOption" *ngFor="let candidatOption of candidats; trackBy: trackCandidatById">{{candidatOption.id}}</option>
+                <option [ngValue]="candidatOption.id === candidature.candidat?.id ? candidature.candidat : candidatOption" 
+                *ngFor="let candidatOption of candidats; trackBy: trackCandidatById">{{candidatOption.nom}}</option>
             </select>
         </div>
     </div>
