--- a/src/main/webapp/app/entities/candidature/candidature.component.html
+++ b/src/main/webapp/app/entities/candidature/candidature.component.html
@@ -30,7 +30,7 @@
                 <td>{{candidature.status}}</td>
                 <td>
                     <div *ngIf="candidature.candidat">
-                        <a [routerLink]="['../candidat', candidature.candidat?.id ]" >{{candidature.candidat?.id}}</a>
+                        <a [routerLink]="['../candidat', candidature.candidat?.id ]" >{{candidature.candidat?.nom}}</a>
                     </div>
                 </td>
                 <td class="text-right">
